@@ -248,6 +248,7 @@ $LANG_confignames['membership'] = array(
     'allow_buy_now' => 'Allow Buy-Now Payment Button?',
     'mem_num_fmt' => 'Format for membership numbers',
     'use_mem_number' => 'Use membership numbers?',
+    'disable_expired' => 'Disable account upon expiration',
 );
 
 // Note: entries 0, 1, and 12 are the same as in $LANG_configselects['Core']
