@@ -103,6 +103,14 @@ There is no automatic facility for deleting membership records completely from t
     </tr>
 
     <tr class="row0">
+      <td class="col0 leftalign" valign="top"><a name="desc_disable_expired"></a>
+        Disable Expired Accounts?</td>
+      <td class="col1 leftalign">
+        Select &quot;Yes&quot; if you wish to have members&apos; site accounts disabled when their membership expires. This option would be used if you operate a private site that only permits current members to log in. The account status will be set to &quot;Banned&quot;. Rember that the administrator must manually re-enable the account for members who wish to renew after expiration.
+      </td>
+    </tr>
+
+    <tr class="row0">
       <td class="col0 leftalign" valign="top"><a name="desc_require_app"></a>
         Require App?</td>
       <td class="col1 leftalign">
